--- a/index.html
+++ b/index.html
@@ -1,48 +1,158 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!--Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!--my css-->
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-  <body>
-    <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+    <title>My portofolio | Hxmeisya</title>
+</head>
+
+<body id="home">
+    <!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">XI-RPL SMKN 40 JAKARTA</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">Meisya Handrina</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link active " aria-current="page " href="#home ">Home</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="#about ">About</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="#projects " tabindex="-1 " aria-disabled="true ">Projects</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="#contact " tabindex="-1 " aria-disabled="true ">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-    <!-- Akhir NavBar -->
+    </nav>
+    <!--akhir navbar-->
+    <!--jumbotron-->
+    <section class="jumbotron text-center">
+        <img src="WhatsApp Image 2023-08-24 at 11.35.52.jpeg" alt="Hxmeisya" width="200" class="rounded-circle img-thumbnail" />
+        <h1 class="display-6">Meisya Handrina</h1>
+        <p class="lead">Student | Programmer</p>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="20" d="M0,32L48,37.3C96,43,192,53,288,90.7C384,128,480,192,576,192C672,192,768,128,864,117.3C960,107,1056,149,1152,149.3C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section>
+    <!--akhir jumbotron-->
+    <!--about-->
+    <section id="about">
+        <div class="container">
+            <div class="row text-center mb-3">
+                <div class="col">
+                    <h2>About me</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center fs-5 text-center">
+                <div class="col-4">
+                    <p><a>Halo semuanya! Perkenalkan nama saya Meisya Handrina. Biasa dipanggil Meisya. Saya bersekolah di SMKN 40 Jakarta dan di kelas XI-RPL. Saya tinggal di Jl. Balai Rakyat 1. Senang bertemu denganmu!</a></p>
+                </div>
+                <div class="col-4">
+                    <p>Tujuan saya membuat website untuk mengembangkan kemampuan dan keterampilan saya dalam membuat website.</p>
+                </div>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,224L40,229.3C80,235,160,245,240,229.3C320,213,400,171,480,133.3C560,96,640,64,720,80C800,96,880,160,960,165.3C1040,171,1120,117,1200,96C1280,75,1360,85,1400,90.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg></section>
+    </section>
+    <!--akhir about-->
+    <!--project-->
+    <section id="projects">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col">
+                    <h2><b>My fav idol</b></h2>
+                </div>
 
-    <!-- Jumbotron -->
-    <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-       
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#a2d9ff" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,69.3C274.3,43,343,53,411,85.3C480,117,549,171,617,170.7C685.7,171,754,117,823,122.7C891.4,128,960,192,1029,218.7C1097.1,245,1166,235,1234,202.7C1302.9,171,1371,117,1406,90.7L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
-    <!-- Akhir Jumbotron -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-4 mb-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="younghoon.jpg" class="card-img-top" alt="...">
+                        <div data-aos="flip-left"></div>
+                        <div class="card-body">
+                            <p class="card-text">Kim Younghoon</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="chaehyun kuromi.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Kim Chaehyun</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="wonyoung cute.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Jang Wonyoung</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="10" d="M0,96L30,106.7C60,117,120,139,180,138.7C240,139,300,117,360,122.7C420,128,480,160,540,160C600,160,660,128,720,106.7C780,85,840,75,900,80C960,85,1020,107,1080,133.3C1140,160,1200,192,1260,186.7C1320,181,1380,139,1410,117.3L1440,96L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+    </section>
+    <!--Akhir project-->
+    <!--Contact-->
+    <section id="contact">
+        <div class="container">
+            <div class="row text-center mb-3">
+                <div class="col">
+                    <h2>Contact Me</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nama Lengkap</label>
+                            <input type="name" class="form-control" id="name" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Email" class="form-label">Email</label>
+                            <input type="Email" class="form-control" id="Email" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Pesan" class="form-label">Pesan</label>
+                            <textarea class="form-control" id="Pesan" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Kirim</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="10" d="M0,32L30,58.7C60,85,120,139,180,144C240,149,300,107,360,74.7C420,43,480,21,540,48C600,75,660,149,720,154.7C780,160,840,96,900,112C960,128,1020,224,1080,224C1140,224,1200,128,1260,85.3C1320,43,1380,53,1410,58.7L1440,64L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
+    </section>
+    <!--Akhir contact-->
+    <!--footer-->
+    <footer class="bg-primary text-white text-center pb-3">
+        <p>Created with <i class="bi bi-heart-fill text-danger"></i> by
+            <a href="https://instagram.com/sasyyaw?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" class="text-white fw-bold">Sasyyaw</a> </a>
+        </p>
+    </footer>
+    <!--Akhir footer-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+
+
+</body>
+
 </html>
