--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!--my css-->
     <link rel="stylesheet" href="style.css">
     <title>My portofolio | Hxmeisya</title>
@@ -54,7 +56,7 @@
     <!--about-->
     <section id="about">
         <div class="container">
-            <div class="row text-center mb-3">
+            <div class="row text-center mb-3" data-aos="zoom-in">
                 <div class="col">
                     <h2>About me</h2>
                 </div>
@@ -74,7 +76,7 @@
     <!--project-->
     <section id="projects">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center" data-aos="zoom-in">
                 <div class="col">
                     <h2><b>My fav idol</b></h2>
                 </div>
@@ -83,16 +85,15 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" data-aos="fade-right" style="width: 18rem;">
                         <img src="younghoon.jpg" class="card-img-top" alt="...">
-                        <div data-aos="flip-left"></div>
                         <div class="card-body">
                             <p class="card-text">Kim Younghoon</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" data-aos="zoom-in" style="width: 18rem;">
                         <img src="chaehyun kuromi.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Kim Chaehyun</p>
@@ -100,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" data-aos="fade-left" style="width: 18rem;">
                         <img src="wonyoung cute.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Jang Wonyoung</p>
@@ -115,27 +116,35 @@
     <!--Contact-->
     <section id="contact">
         <div class="container">
-            <div class="row text-center mb-3">
+            <div class="row text-center mb-3" data-aos="zoom-in">
                 <div class="col">
                     <h2>Contact Me</h2>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <form>
+                    <form name="meisya-contact-form">
+                      <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                        <strong>Terima kasih!</strong> Pesan anda sudah kami terima
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                      </div>
                         <div class="mb-3">
                             <label for="name" class="form-label">Nama Lengkap</label>
-                            <input type="name" class="form-control" id="name" aria-describedby="emailHelp">
+                            <input type="name" class="form-control" id="name" aria-describedby="emailHelp" name="nama">
                         </div>
                         <div class="mb-3">
                             <label for="Email" class="form-label">Email</label>
-                            <input type="Email" class="form-control" id="Email" aria-describedby="emailHelp">
+                            <input type="Email" class="form-control" id="Email" aria-describedby="emailHelp" name="email">
                         </div>
                         <div class="mb-3">
                             <label for="Pesan" class="form-label">Pesan</label>
-                            <textarea class="form-control" id="Pesan" rows="3"></textarea>
+                            <textarea class="form-control" id="Pesan" rows="3" name="pesan"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Kirim</button>
+                        <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+                        <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                          <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                          <span role="status">Loading...</span>
+                        </button>
                     </form>
                 </div>
             </div>
@@ -149,8 +158,34 @@
             <a href="https://instagram.com/sasyyaw?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" class="text-white fw-bold">Sasyyaw</a> </a>
         </p>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
     <!--Akhir footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyioMOtvrn6rRTqhr5Y8TfVyTDF8e9Zt8-cxy3wXPN-3kPDCGE7SnRaHOZBCNUjg3Qg/exec'
+      const form = document.forms['meisya-contact-form']
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+    
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response =>{
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            myAlert.classList.toggle('d-none')
+            form.reset();
+           console.log('Success!', response)})
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
 
 
 </body>
